# Quorrin

./: .env.example  .gitignore  .pre-commit-config.yaml  01_executive_summary.md  02_severity_register.md  AGENTS.md  AUDIT_2026-06-23.md  BASELINE_SNAPSHOT.md  LICENSE  LIVE_CONTRACT.md  Makefile  README.md  mc_results_v2.json  monitor_all  pyproject.toml  requirements.txt  session-ses_0df9.md
.github/workflows/: ci.yml
adr/: ADR-011-january-2027-known-issues.md  README.md
backtests/: adversarial_manifold.py  eurusd_cot_walkforward.py  eurusd_hybrid_walkforward.py  filter_untested.py  forward_test.py  model_promotion_engine.py  performance_metrics.py  regime_analysis.py  sandbox_retrain.py  sweep_gbpcad_gbpnzd.py  sweep_nzdusd_features.py  sweep_regime_geom.py  sweep_sl_top5.py  sweep_top5_features.py  trade_analysis.py  trailing_sweep.py  train_new_models.py  walk_forward.py
benchmarks/: README.md  microbenchmark.py  mock_data.py
configs/: driver_atlas.py  mt5_symbol_map.yaml  paper_trading.yaml
data/: weekly_pipeline.py
data/loaders/: downloader.py  macro_loader.py
data/research/: survival_baseline.json  survival_extended.json
diagnostics/: cross_asset_test.py  debug_mr.py  eurusd_hybrid_isolation_test.py  regime_audit.py  signal_integrity_audit.py  targeted_label_audit.py
docs/: BASELINE_SNAPSHOT.md  FEATURES.md  GOVERNANCE_LAYER.md  HARDENING_ROADMAP.md  PAPER_TRADING_RUNBOOK.md  PRODUCTION_SYSTEM_SPEC_v1.md  README.md  RISK_ITEMS.md  SYSTEM_OVERVIEW.md
docs/adr/: ADR-000-index.md  ADR-001-triple-barrier-labeling.md  ADR-002-regime-classifier-as-router.md  ADR-003-expanding-train-window.md  ADR-004-eurusd-rejected.md  ADR-005-macro-expert-head.md  ADR-006-xlf-primary-asset.md  ADR-007-yield-slope-removed.md  ADR-008-five-year-window.md  ADR-009-trade-count-accepted.md  ADR-010-driver-atlas.md  ADR-011-eurusd-blocked.md  ADR-011a-eurusd-unblocked.md  ADR-012-three-asset-portfolio.md  ADR-013-bootstrap-validation.md  ADR-014-zero-overrides-policy.md  ADR-015-asset-specific-label-horizons.md  ADR-016-gold-validation.md  (+10 more)
equity/: walk_forward_gc.py  walk_forward_xlf.py
execution/: broker_interface.py  order_manager.py  portfolio_sync.py
features/: alpha_features.py  archetypes.py  base_features.py  builder.py  contract.py  cot_features.py  data_fetch.py  divergence.py  fxstreet_fetcher.py  interaction_features.py  labels.py  lead_lag_features.py  liquidity_regime.py  macro_narrative.py  market_structure.py  publication_lags.py  regime_features.py  registry.py  structural_features.py
labels/: compat.py  generator.py  meta_labels.py  trend_adjusted_labels.py  triple_barrier.py
monitoring/: drift_detection.py  live_dashboard.py  mlflow_logger.py  psi_monitor.py  validity_state_machine.py  weekly_report.py
paper_trading/: __init__.py  asset_engine.py  asset_engine_factory.py  asset_inference_pipeline.py  asset_pnl_controller.py  asset_state.py  asset_training_pipeline.py  config_manager.py  data_fetcher.py  decision.py  deferred_entry.py  diagnostics.py  drift_scoring.py  dynamic_sltp.py  engine.py  entry_optimizer.py  execution_bridge.py  execution_context.py  execution_policy.py  execution_simulator.py  experiment_context.py  health_score.py  market_hours.py  monitor.py  portfolio_builder.py  position_manager.py  regime_classifier.py  risk_governance.py  satellite.py  satellite_runner.py  scale_out.py  serve.py  serve_common.py  serve_handler.py  serve_routes.py  server.py  shadow_actions.py  shadow_analytics.py  shadow_feedback.py  shadow_learning.py  (+8 more)
portfolio/: correlation_clusters.py  hrp_allocator.py  risk_parity.py
quantforge/: __init__.py
quorrin/: __init__.py
risk/: drawdown_controls.py  exposure_limits.py  position_sizing.py  stop_engine.py
scripts/: backtest_pnl.py  check_chf_correlation.py  check_data_source_mismatch.py  check_direction_win_rates.py  check_live_deps.sh  circuit_breaker_sim.py  compare_ensemble.py  crisis_replay.py  ensemble_pilot_backtest.py  filter_direction.py  gc_walk_forward.py  monitor_paper_trading.py  monte_carlo_drawdown.py  retrain_all_fixed.py  retrain_counterfactual.py  setup_mt5_wine.sh  test_replay_determinism.py  train_regime_models.py  walk_forward_all.py  walk_forward_backtest.py
shared/: factor_model.py  meta_labeling.py  metrics_snapshot.py  portfolio_weights.py  registry.py  signal.py  sizing.py  sizing_chain.py
signals/: paper_signal_adapter.py  signal_filters.py  signal_generator.py  thresholding.py
tests/: _test_realtime_price.py  conftest.py  mock_mt5_client.py  test_adaptive_exit.py  test_api_contract.py  test_atlas_detector.py  test_base_features.py  test_config_schema.py  test_core_mtm.py  test_cot_features.py  test_dashboard_routes.py  test_decision.py  test_drift_detection.py  test_dynamic_sltp.py  test_edge_health.py  test_engine.py  test_entry_service.py  test_execution_bridge.py  test_execution_physics.py  test_factor_model.py  test_feature_isolation.py  test_fxstreet_fetcher.py  test_governance_drawdown.py  test_governance_drift.py  test_governance_engine.py  test_governance_health.py  test_governance_risk.py  test_importance_tracker_gaps.py  test_interaction_features.py  test_json_logging.py  test_lead_lag_features.py  test_liquidity_regime.py  test_macro_narrative.py  test_macro_trade_feedback.py  test_meta_labeling.py  test_meta_labeling_gaps.py  test_monitor_paper_trading.py  test_mt5_broker.py  test_mt5_broker_wal.py  test_mt5_client_mock.py  (+41 more)
tools/: check_config_schema.py  check_import_firewall.py  check_no_bare_asserts.py  check_no_plaintext_secrets.py  doc_drift_check.py  import_guard.py
walkforward/: CL_fold_ic.json  CL_wf_signals.parquet  CL_wf_summary.csv  ES_fold_ic.json  ES_wf_signals.parquet  ES_wf_summary.csv  IWM_fold_ic.json  IWM_wf_signals.parquet  IWM_wf_summary.csv  NQ_fold_ic.json  NQ_wf_signals.parquet  NQ_wf_summary.csv  PROMOTION_REPORT.md  ^DJI_fold_ic.json  ^DJI_wf_signals.parquet  ^DJI_wf_summary.csv  ^VIX_fold_ic.json  ^VIX_wf_signals.parquet  ^VIX_wf_summary.csv  all_assets_wf_summary.csv  promotion_report.csv  promotion_report.json  ticker_map.json
(+382 files in other folders)
