[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["paper_trading*", "quantforge*"]

[project]
name = "quantforge"
version = "0.1.0"
description = "Modular quantitative research framework for regime-conditioned equity and FX strategy research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "MktOwl"}]
keywords = ["quantitative-finance", "trading", "machine-learning", "xgboost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
    "scikit-learn>=1.2",
    "xgboost>=1.7",
    "matplotlib>=3.7",
    "ta>=0.10",
    "pyarrow>=10",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "shap>=0.42",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "plotly>=5.14",
    "jupyterlab>=4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["I", "E", "F", "W", "UP", "N", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backtests", "diagnostics", "features", "labels", "models", "paper_trading", "signals"]
