[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "backtests*",
    "configs*",
    "data*",
    "features*",
    "labels*",
    "models*",
    "monitoring*",
    "paper_trading*",
    "portfolio*",
    "quantforge*",
    "research*",
    "risk*",
    "shared*",
    "signals*",
]
exclude = ["tests*", "archive*", "notebooks*"]

[tool.setuptools.package-data]
configs = ["*.yaml"]
data = ["processed/*.parquet", "processed/*.csv", "research/*.json", "research/*.yaml", "research/*.parquet"]
research = ["phase_h/outputs/**/*.json", "phase_h/outputs/**/*.yaml"]

[project]
name = "quantforge"
version = "0.1.0"
description = "Modular quantitative research framework for regime-conditioned equity and FX strategy research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "MktOwl"}]
keywords = ["quantitative-finance", "trading", "machine-learning", "xgboost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
    "scikit-learn>=1.2",
    "xgboost>=1.7",
    "matplotlib>=3.7",
    "ta>=0.10",
    "pyarrow>=10",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "shap>=0.42",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "plotly>=5.14",
    "jupyterlab>=4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "__init__.py",
    "archive",
    "backtests",
    "data",
    "diagnostics",
    "docs",
    "adr",
    "equity",
    "models",
    "notebooks",
    "paper_trading/dashboard",
    "research",
    "scripts",
    "signals",
    "tests",
    "main.py",
]

[tool.ruff.lint]
select = ["I", "E", "F", "W", "UP", "N", "SIM"]

[tool.ruff.lint.per-file-ignores]
"paper_trading/__init__.py" = ["N999"]
"paper_trading/execution/__init__.py" = ["N999"]
"labels/__init__.py" = ["N999"]
"tests/__init__.py" = ["N999"]
# ML convention: X (uppercase) for feature matrices, y for targets
"paper_trading/asset_engine.py" = ["N803", "N806"]
"paper_trading/asset_inference_pipeline.py" = ["N803", "N806"]
"paper_trading/asset_training_pipeline.py" = ["N803", "N806"]
"paper_trading/serve_handler.py" = ["N802"]
"paper_trading/diagnostics.py" = ["N803", "N806"]
"paper_trading/wrappers.py" = ["N803", "N806"]
# ML convention: X (uppercase) for feature matrices, y for targets
"labels/meta_labels.py" = ["N803", "N806"]
# Research scripts use uppercase X for ML feature matrix convention
"scripts/*.py" = ["N806", "N803"]
"research/**/*.py" = ["N806", "N803"]
"tests/*.py" = ["N806", "N803"]
"shared/*.py" = ["N806", "N803"]
# Pre-existing line length issues (grandfathered)
"paper_trading/decision.py" = ["E501"]
"paper_trading/drift_scoring.py" = ["E501"]
"paper_trading/risk_governance.py" = ["E501"]
"paper_trading/shadow_learning.py" = ["E501"]
"paper_trading/simulation_snapshot.py" = ["E501"]
# Research scripts: pre-existing line length violations in print/log formatting
"research/execution_surface/compare_strategies.py" = ["E501"]
"research/execution_surface/replay_engine.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backtests", "diagnostics", "features", "labels", "models", "paper_trading", "signals"]
